# heart_disease_prediction

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  skills-lock.json
apps/server/: .gitignore  README.md  api.py  cardiopredict.db  database.py  esquemas.py  models.py  pyproject.toml  run.py
apps/server/artefatos/: random_forest.pkl
apps/server/migrations/: env.py
apps/server/migrations/versions/: 2fea789095e6_initial_schema.py  2fea789095e6_schema_inicial.py  d4f8a2c1b3e7_rename_columns_to_english.py
apps/server/ml/: __init__.py  avaliacao.py  dados.py  modelos.py
apps/server/notebooks/: Ensemble.ipynb
apps/server/rotas/: __init__.py  dashboard.py  modelos.py  pacientes.py  paginas.py  previsao.py  relatorios.py  resultado.py
apps/server/src/api/app/: app.py
apps/server/src/api/middleware/: redirect.py
apps/server/src/api/routes/: dashboard.py  evaluations.py  modelos.py  models.py  pacientes.py  pages.py  patients.py  prediction.py  previsao.py  relatorios.py  reports.py  result.py  resultado.py
apps/server/src/artifacts/: knn.pkl  training_background.pkl
apps/server/src/database/: cardiopredict.db  connection.py  database.py  migrar_metricas.py
apps/server/src/database/models/: __init__.py  avaliacao.py  evaluation.py  model.py  paciente.py  patient.py  relatorio.py  report.py
apps/server/src/machine_learning/: __init__.py  avaliacao.py  dados.py  data.py  evaluation.py  modelos.py  models.py
apps/server/src/models/: __init__.py  avaliacao.py  metrica.py  paciente.py  relatorio.py
apps/server/src/schemas/: avaliacao.py  common.py  dashboard.py  evaluation.py  model.py  modelo.py  paciente.py  patient.py  relatorio.py  report.py  result.py  resultado.py
apps/server/src/services/: feature_analysis.py  prediction_service.py  recommendations.py  report_pdf.py  train_models.py
apps/server/src/services/constants/: __init__.py  features.json
apps/server/tests/: test_redirect_middleware.py
apps/web/: README.md  eslint.config.js  index.html  orval.config.ts  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: index.css  main.tsx  routeTree.gen.ts
apps/web/src/atoms/: patient.ts
apps/web/src/components/avaliacao/: form-wizard.tsx
apps/web/src/components/dashboard/: header.tsx  model-info.tsx  risk-distribution.tsx  risk-factors.tsx  stat-cards-row.tsx
apps/web/src/components/layout/: sidebar.tsx  (+1 more)
apps/web/src/lib/: animations.css  api.ts  utils.ts
apps/web/src/routes/: __root.tsx  index.tsx
apps/web/src/store/: model.ts
design/: pibic.pen
doc/: Artigo - Rede de Saberes VII.txt  Conexões_ANÁLISE COMPARATIVA DE ALGORITMOS DE MACHINE LEARNING NO DIAGNÓSTICO DE CARDIOPATIAS_ Floresta Aleatória e Árvore de Decisão. .docx.txt  Documento_Consolidado_ML_Cardiovascular.md  Predição de Arritmias Cardíacas com Árvores de Decisão_ Uma Análise Comparativa de Técnicas de separação de dados.txt
openspec/changes/archive/2026-06-29-refactor-clean-code/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-extract-feature-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-integrate-shadcn-ui/: proposal.md  tasks.md
openspec/changes/archive/2026-07-12-export-report-pdf/: design.md  proposal.md  tasks.md
openspec/changes/integrate-shadcn-ui/: design.md
openspec/changes/require-patient-for-evaluation/: design.md  proposal.md  tasks.md
openspec/specs/report-pdf-export/: spec.md
server/: README.md  api.py  pyproject.toml  servico.py  train_models.py  treinar.py
server/artefatos/: scaler.pkl
server/exemplos/: paciente.json
server/modelos/: KNN.ipynb  Random Forest.ipynb  SVM.ipynb  UCI.ipynb
server/rotas/: paginas.py  previsao.py
server/src/artifacts/: ensemble.pkl  svm.pkl
server/src/modelos/: __init__.py  base.py  ensemble.py  evaluation.py  knn.py  preprocessing.py  random_forest.py  svm.py
(+45 files in other folders)
