[project]
name = "server"
version = "0.1.0"
description = "Heart disease prediction API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.0",
    "ucimlrepo>=0.0.7",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/modelos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
