[project]
name = "server"
version = "0.1.0"
description = "API de predição de doença cardíaca (Heart Disease Prediction)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "scalar-fastapi>=1.0.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.0",
    "ucimlrepo>=0.0.7",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

# Este projeto é uma coleção de scripts (não uma biblioteca para instalar),
# então pedimos ao uv para NÃO tentar empacotá-lo.
[tool.uv]
package = false
