[project]
name = "server"
version = "0.1.0"
description = "API de predição de doença cardíaca (Heart Disease Prediction)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "scalar-fastapi>=1.0.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.0",
    "ucimlrepo>=0.0.7",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.18.4",
    "llvmlite>=0.48.0",
    "numba>=0.66.0",
    "shap>=0.49.1",
    "fastapi-cache2>=0.2.2",
    "jinja2>=3.1.6",
    "redis>=8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
exclude = ["notebooks", "migrations"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"src/api/routes/*.py" = ["B008"]
"src/machine_learning/*.py" = ["N803", "N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
include = ["src"]
